# kylin-kmre-emugl

./: CMakeLists.txt
android-emu/android/: HostHwInfo.h
android-emu/android/utils/: gles_config_detection.h
android-emugl/: CMakeLists.txt
android-emugl/angle/include/GLSLANG/: ShaderVars.h
android-emugl/host/: CMakeLists.txt
android-emugl/host/libs/libOpenglRender/: CMakeLists.txt  UnixStream.cpp
android-emugl/host/opengles/: opengles.cpp
debian/: control
